objects/File_Exchange_Access__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to restrict/provide access to delete file(s) in File Exchange.</description>
        <inlineHelpText>Check the box to allow deleting file(s) in File Exchange.</inlineHelpText>
        <label>Allow_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to restrict/provide access to download file(s) from File Exchange.</description>
        <inlineHelpText>Check the box to allow downloading file(s) from File Exchange.</inlineHelpText>
        <label>Allow Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to restrict/provide access to upload file(s) to File Exchange.</description>
        <inlineHelpText>Check the box to allow uploading file(s) to File Exchange.</inlineHelpText>
        <label>Allow Upload</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>